[package]
name = "vim-tips-wiki"
version = "0.1.0"
authors = ["Danila Mihailov <danilamihailov@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
select = "0.4.3"
reqwest = { version = "0.10" }
tokio = { version = "0.2", features = ["full"] }
regex = "1"
urlencoding = "1.0.0"
